accelerated-domains: add igarwin.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -46741,6 +46741,7 @@ server=/igandan.com/114.114.114.114
 server=/igao7.com/114.114.114.114
 server=/igaoda.com/114.114.114.114
 server=/igaosheng.com/114.114.114.114
+server=/igarwin.com/114.114.114.114
 server=/igbill.com/114.114.114.114
 server=/igdzc.com/114.114.114.114
 server=/igea-un.org/114.114.114.114
