accelerated-domains: add kg-power.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -53793,6 +53793,7 @@ server=/kfyg.xyz/114.114.114.114
 server=/kfyongjings.com/114.114.114.114
 server=/kfzimg.com/114.114.114.114
 server=/kg-gold.com/114.114.114.114
+server=/kg-power.com/114.114.114.114
 server=/kg.com/114.114.114.114
 server=/kghbcn.com/114.114.114.114
 server=/kgimg.com/114.114.114.114
