--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -82030,6 +82030,7 @@ server=/te-silicone.com/114.114.114.114
 server=/te160.com/114.114.114.114
 server=/te5.com/114.114.114.114
 server=/te6.com/114.114.114.114
+server=/tea-gd.com/114.114.114.114
 server=/tea26.com/114.114.114.114
 server=/tea7.com/114.114.114.114
 server=/teach365.com/114.114.114.114
