accelerated-domains: add yunshangguangdong.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -99555,6 +99555,7 @@ server=/yunruizz.com/114.114.114.114
 server=/yunsd.net/114.114.114.114
 server=/yunser.com/114.114.114.114
 server=/yunshan.net/114.114.114.114
+server=/yunshangguangdong.com/114.114.114.114
 server=/yunshanghangzhou.com/114.114.114.114
 server=/yunshangkj.com/114.114.114.114
 server=/yunshangnc.com/114.114.114.114
