accelerated-domains: add allspark-cn.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -10929,6 +10929,7 @@ server=/allschoolcdn.com/114.114.114.114
 server=/allsenseww.com/114.114.114.114
 server=/allshiping.com/114.114.114.114
 server=/allshopwatch.com/114.114.114.114
+server=/allspark-cn.com/114.114.114.114
 server=/allstack.net/114.114.114.114
 server=/allstatics.com/114.114.114.114
 server=/allstor.org/114.114.114.114
