accelerated-domains: add gdgkfn.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -33929,6 +33929,7 @@ server=/gdfshx.com/114.114.114.114
 server=/gdgassoc.com/114.114.114.114
 server=/gdggkf.com/114.114.114.114
 server=/gdghg.com/114.114.114.114
+server=/gdgkfn.com/114.114.114.114
 server=/gdgkty.com/114.114.114.114
 server=/gdgpc.net/114.114.114.114
 server=/gdgrsw.com/114.114.114.114
