accelerated-domains: add gdus.cc

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -34098,6 +34098,7 @@ server=/gduaee.com/114.114.114.114
 server=/gdunis.com/114.114.114.114
 server=/gdunt.com/114.114.114.114
 server=/gdupi.com/114.114.114.114
+server=/gdus.cc/114.114.114.114
 server=/gdutbbs.com/114.114.114.114
 server=/gdvolunteer.net/114.114.114.114
 server=/gdwanshun.com/114.114.114.114
