accelerated-domains: add gdxrtc.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -34120,6 +34120,7 @@ server=/gdxindun.com/114.114.114.114
 server=/gdxinqiang168.com/114.114.114.114
 server=/gdxise.com/114.114.114.114
 server=/gdxmsx.com/114.114.114.114
+server=/gdxrtc.com/114.114.114.114
 server=/gdxscode.com/114.114.114.114
 server=/gdxxb.com/114.114.114.114
 server=/gdxy.vip/114.114.114.114
