accelerated-domains: add gdzhenxing.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -34150,6 +34150,7 @@ server=/gdz.co/114.114.114.114
 server=/gdzgjl.com/114.114.114.114
 server=/gdzgy.com/114.114.114.114
 server=/gdzhcx.com/114.114.114.114
+server=/gdzhenxing.com/114.114.114.114
 server=/gdzhiding.com/114.114.114.114
 server=/gdzhonghua.com/114.114.114.114
 server=/gdzhongshan.com/114.114.114.114
