accelerated-domains: add gortune.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -35657,6 +35657,7 @@ server=/goregxa.com/114.114.114.114
 server=/gorichox.com/114.114.114.114
 server=/gorouter.info/114.114.114.114
 server=/gorse.com/114.114.114.114
+server=/gortune.com/114.114.114.114
 server=/gosailgis.com/114.114.114.114
 server=/goshijia.com/114.114.114.114
 server=/gosinoic.com/114.114.114.114
