accelerated-domains: add litianchina.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -57408,6 +57408,7 @@ server=/litemob.net/114.114.114.114
 server=/liteng-industry.com/114.114.114.114
 server=/lithomaterial.com/114.114.114.114
 server=/litian268.com/114.114.114.114
+server=/litianchina.com/114.114.114.114
 server=/liticool.club/114.114.114.114
 server=/litilala.site/114.114.114.114
 server=/litilala.xyz/114.114.114.114
