accelerated-domains: add rekong.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -72444,6 +72444,7 @@ server=/reinness.com/114.114.114.114
 server=/rejesafe.com/114.114.114.114
 server=/rejushe.com/114.114.114.114
 server=/rekelead.com/114.114.114.114
+server=/rekong.com/114.114.114.114
 server=/rekonquer.com/114.114.114.114
 server=/rekoo.com/114.114.114.114
 server=/rekoo.net/114.114.114.114
