--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -85230,6 +85230,7 @@ server=/ucaii.com/114.114.114.114
 server=/ucaiyuan.com/114.114.114.114
 server=/ucaiyun.com/114.114.114.114
 server=/ucancs.com/114.114.114.114
+server=/ucanrobot.com/114.114.114.114
 server=/ucantech.com/114.114.114.114
 server=/ucantech.net/114.114.114.114
 server=/ucarinc.com/114.114.114.114
