accelerated-domains: add wonderfulnonwoven.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -90099,6 +90099,7 @@ server=/wonadea.com/114.114.114.114
 server=/wonder.wiki/114.114.114.114
 server=/wondercv.com/114.114.114.114
 server=/wonderful-pr.com/114.114.114.114
+server=/wonderfulnonwoven.com/114.114.114.114
 server=/wonderfulsz.com/114.114.114.114
 server=/wonderjk.com/114.114.114.114
 server=/wonderkun.cc/114.114.114.114
