accelerated-domains: add zhenmeifoods.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -101580,6 +101580,7 @@ server=/zhenlingjituan.com/114.114.114.114
 server=/zhenlongauto.com/114.114.114.114
 server=/zhenlongvip.com/114.114.114.114
 server=/zhenmeidai.com/114.114.114.114
+server=/zhenmeifoods.com/114.114.114.114
 server=/zhenmeigroup.com/114.114.114.114
 server=/zhenpin.com/114.114.114.114
 server=/zhenren.com/114.114.114.114
