accelerated-domains: add zhenyuansoft.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -101606,6 +101606,7 @@ server=/zhenxinfw.xyz/114.114.114.114
 server=/zhenxingkuangchanpin.com/114.114.114.114
 server=/zhenyangshoes.com/114.114.114.114
 server=/zhenyouliao.com/114.114.114.114
+server=/zhenyuansoft.com/114.114.114.114
 server=/zhenyunpan.com/114.114.114.114
 server=/zhenzhi365.com/114.114.114.114
 server=/zhenzhuchanfu.com/114.114.114.114
