--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -22227,6 +22227,7 @@ server=/cngbdl.com/114.114.114.114
 server=/cngdhl.com/114.114.114.114
 server=/cngin.com/114.114.114.114
 server=/cngjtx.com/114.114.114.114
+server=/cngma.com/114.114.114.114
 server=/cngold.org/114.114.114.114
 server=/cngoldres.com/114.114.114.114
 server=/cngolf.tv/114.114.114.114
