accelerated-domains: add gdyuegou.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -34143,6 +34143,7 @@ server=/gdysnk.com/114.114.114.114
 server=/gdytc.com/114.114.114.114
 server=/gdyuanshun.com/114.114.114.114
 server=/gdyuasa.com/114.114.114.114
+server=/gdyuegou.com/114.114.114.114
 server=/gdyuhi.com/114.114.114.114
 server=/gdyunxiao.com/114.114.114.114
 server=/gdyunyin.net/114.114.114.114
