accelerated-domains: add guangdongtianxi.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -36270,6 +36270,7 @@ server=/guangdonglianxing.com/114.114.114.114
 server=/guangdonglong.com/114.114.114.114
 server=/guangdongrc.com/114.114.114.114
 server=/guangdongtaiji.com/114.114.114.114
+server=/guangdongtianxi.com/114.114.114.114
 server=/guangdongwater.com/114.114.114.114
 server=/guangdongyunchen.com/114.114.114.114
 server=/guangdv.com/114.114.114.114
