--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -27562,6 +27562,7 @@ server=/douco.com/114.114.114.114
 server=/doudaihuo.com/114.114.114.114
 server=/doudang.com/114.114.114.114
 server=/doudehui.com/114.114.114.114
+server=/doudeke.com/114.114.114.114
 server=/doudier.com/114.114.114.114
 server=/doudou.com/114.114.114.114
 server=/doudou.fun/114.114.114.114
