accelerated-domains: add foreweld.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -32405,6 +32405,7 @@ server=/forestfood.com/114.114.114.114
 server=/forestmusicnanjing.com/114.114.114.114
 server=/forestpolice.org/114.114.114.114
 server=/foreveross.com/114.114.114.114
+server=/foreweld.com/114.114.114.114
 server=/forface3d.com/114.114.114.114
 server=/forgame.com/114.114.114.114
 server=/forindata.com/114.114.114.114
