--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -91947,6 +91947,7 @@ server=/xhclub.net/114.114.114.114
 server=/xhcpa.net/114.114.114.114
 server=/xhcpas.com/114.114.114.114
 server=/xhd.org/114.114.114.114
+server=/xhdjx.com/114.114.114.114
 server=/xhdnwct.com/114.114.114.114
 server=/xhdollar.com/114.114.114.114
 server=/xhdpay.com/114.114.114.114
