accelerated-domains: add gdfuji.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -33929,6 +33929,7 @@ server=/gdfgq.club/114.114.114.114
 server=/gdfplaza.com/114.114.114.114
 server=/gdfs.com/114.114.114.114
 server=/gdfshx.com/114.114.114.114
+server=/gdfuji.com/114.114.114.114
 server=/gdgassoc.com/114.114.114.114
 server=/gdggkf.com/114.114.114.114
 server=/gdghg.com/114.114.114.114
