accelerated-domains: add joya-electric.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -51451,6 +51451,7 @@ server=/jowto.com/114.114.114.114
 server=/joy-air.com/114.114.114.114
 server=/joy110.com/114.114.114.114
 server=/joy5151.com/114.114.114.114
+server=/joya-electric.com/114.114.114.114
 server=/joyact.com/114.114.114.114
 server=/joyami.com/114.114.114.114
 server=/joyanglab.com/114.114.114.114
