--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -9569,6 +9569,7 @@ server=/aecichina.com/114.114.114.114
 server=/aecname.com/114.114.114.114
 server=/aeconomic.com/114.114.114.114
 server=/aecsian.com/114.114.114.114
+server=/aeenergy.com/114.114.114.114
 server=/aeenets.com/114.114.114.114
 server=/aeespace.com/114.114.114.114
 server=/aegcar.com/114.114.114.114
