--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -25917,6 +25917,7 @@ server=/desunpv.com/114.114.114.114
 server=/desuntech.com/114.114.114.114
 server=/detailroi.com/114.114.114.114
 server=/detion.com/114.114.114.114
+server=/detonfan.com/114.114.114.114
 server=/detonger.com/114.114.114.114
 server=/detu.com/114.114.114.114
 server=/detuyun.com/114.114.114.114
