--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -33657,6 +33657,7 @@ server=/gaokzx.com/114.114.114.114
 server=/gaoligroup.com/114.114.114.114
 server=/gaolihanjie.com/114.114.114.114
 server=/gaolouimg.com/114.114.114.114
+server=/gaomeif.com/114.114.114.114
 server=/gaomeluo.com/114.114.114.114
 server=/gaomon.net/114.114.114.114
 server=/gaopaiwood.com/114.114.114.114
