--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -33839,6 +33839,7 @@ server=/gcyts.com/114.114.114.114
 server=/gcyy08.com/114.114.114.114
 server=/gczyg.com/114.114.114.114
 server=/gd-chenxing.com/114.114.114.114
+server=/gd-chuangfu.com/114.114.114.114
 server=/gd-dl.com/114.114.114.114
 server=/gd-haijing.com/114.114.114.114
 server=/gd-hskj.com/114.114.114.114
