--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -34041,6 +34041,7 @@ server=/gdrc360.com/114.114.114.114
 server=/gdrc365.com/114.114.114.114
 server=/gdrcu.com/114.114.114.114
 server=/gdrfyy.com/114.114.114.114
+server=/gdronggang.com/114.114.114.114
 server=/gdroro.com/114.114.114.114
 server=/gdrqj.org/114.114.114.114
 server=/gdruien.com/114.114.114.114
