--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -34050,6 +34050,7 @@ server=/gdrxzx.com/114.114.114.114
 server=/gds-huanbaogroup.com/114.114.114.114
 server=/gds-services.com/114.114.114.114
 server=/gdsa.com/114.114.114.114
+server=/gdsaipu.com/114.114.114.114
 server=/gdsalt.com/114.114.114.114
 server=/gdscse.net/114.114.114.114
 server=/gdsday.com/114.114.114.114
