--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -34078,6 +34078,7 @@ server=/gdsugar.com/114.114.114.114
 server=/gdsuxie.com/114.114.114.114
 server=/gdswgc.com/114.114.114.114
 server=/gdswine.com/114.114.114.114
+server=/gdswkj668.com/114.114.114.114
 server=/gdsxgd.com/114.114.114.114
 server=/gdsytech.com/114.114.114.114
 server=/gdsyy.org/114.114.114.114
