accelerated-domains: add haidegroup.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -39762,6 +39762,7 @@ server=/haidaike.com/114.114.114.114
 server=/haidaoteam.com/114.114.114.114
 server=/haidaotrip.com/114.114.114.114
 server=/haidaozhu.com/114.114.114.114
+server=/haidegroup.com/114.114.114.114
 server=/haidian-marathon.com/114.114.114.114
 server=/haidii.com/114.114.114.114
 server=/haidilao.com/114.114.114.114
