accelerated-domains: add seerbigdata.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -74942,6 +74942,7 @@ server=/seemse.com/114.114.114.114
 server=/seentao.com/114.114.114.114
 server=/seepomotor.com/114.114.114.114
 server=/seepomotor.net/114.114.114.114
+server=/seerbigdata.com/114.114.114.114
 server=/seerking.com/114.114.114.114
 server=/seersee.com/114.114.114.114
 server=/seesawcoffee.com/114.114.114.114
