accelerated-domains: add skybright-group.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -78025,6 +78025,7 @@ server=/skyao.io/114.114.114.114
 server=/skyapp1.tv/114.114.114.114
 server=/skyard.com/114.114.114.114
 server=/skybluek.com/114.114.114.114
+server=/skybright-group.com/114.114.114.114
 server=/skycaiji.com/114.114.114.114
 server=/skycham.com/114.114.114.114
 server=/skycloudsoftware.com/114.114.114.114
