--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -13271,6 +13271,7 @@ server=/banjia1680.com/114.114.114.114
 server=/banjiajia.com/114.114.114.114
 server=/banjiamao.com/114.114.114.114
 server=/banjiekuaiji.com/114.114.114.114
+server=/banjing.com/114.114.114.114
 server=/banjixiaoguanjia.com/114.114.114.114
 server=/banjuanshu.com/114.114.114.114
 server=/banjunxingkeji.com/114.114.114.114
