--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -33984,6 +33984,7 @@ server=/gdjshd.com/114.114.114.114
 server=/gdjsxh.com/114.114.114.114
 server=/gdjuhan.com/114.114.114.114
 server=/gdjuntai.com/114.114.114.114
+server=/gdjydg.com/114.114.114.114
 server=/gdjysteel.com/114.114.114.114
 server=/gdjyw.com/114.114.114.114
 server=/gdjzcw.com/114.114.114.114
