accelerated-domains: add hailea.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -39811,6 +39811,7 @@ server=/haiketrip.com/114.114.114.114
 server=/haikouvw.com/114.114.114.114
 server=/haikouwater.com/114.114.114.114
 server=/hailanggroup.com/114.114.114.114
+server=/hailea.com/114.114.114.114
 server=/haili-spitzer.com/114.114.114.114
 server=/hailiang.com/114.114.114.114
 server=/hailiangbio.com/114.114.114.114
