accelerated-domains: add honbro.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -43095,6 +43095,7 @@ server=/homsuncap.com/114.114.114.114
 server=/homylogistics.com/114.114.114.114
 server=/homyu.com/114.114.114.114
 server=/honaenergy.com/114.114.114.114
+server=/honbro.com/114.114.114.114
 server=/honco88.com/114.114.114.114
 server=/honda-sundiro.com/114.114.114.114
 server=/hondugroup.com/114.114.114.114
