accelerated-domains: add shirongzhaoye.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -76431,6 +76431,7 @@ server=/shiquask.com/114.114.114.114
 server=/shiqutech.com/114.114.114.114
 server=/shirenzuojia.com/114.114.114.114
 server=/shiritianchengtech.com/114.114.114.114
+server=/shirongzhaoye.com/114.114.114.114
 server=/shisanzhi.com/114.114.114.114
 server=/shishacharcoal.net/114.114.114.114
 server=/shishagame.com/114.114.114.114
