accelerated-domains: add xinghaigroup.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -93062,6 +93062,7 @@ server=/xinggan77.vip/114.114.114.114
 server=/xingganggas.com/114.114.114.114
 server=/xingguanggongkao.com/114.114.114.114
 server=/xinghai365.com/114.114.114.114
+server=/xinghaigroup.com/114.114.114.114
 server=/xinghan.vip/114.114.114.114
 server=/xinghanmuye.com/114.114.114.114
 server=/xinghantec.com/114.114.114.114
