accelerated-domains: add yehuisteel.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -96360,6 +96360,7 @@ server=/yegoo.com/114.114.114.114
 server=/yegrand.com/114.114.114.114
 server=/yeguohd.com/114.114.114.114
 server=/yehoochina.com/114.114.114.114
+server=/yehuisteel.com/114.114.114.114
 server=/yeidc.com/114.114.114.114
 server=/yejiangye.com/114.114.114.114
 server=/yejibang.com/114.114.114.114
