--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -32708,6 +32708,7 @@ server=/fshczf.com/114.114.114.114
 server=/fshd.com/114.114.114.114
 server=/fshh1688.com/114.114.114.114
 server=/fshj118.com/114.114.114.114
+server=/fshones.com/114.114.114.114
 server=/fshpharm.com/114.114.114.114
 server=/fshsl.com/114.114.114.114
 server=/fshuiren.com/114.114.114.114
