--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -33907,6 +33907,7 @@ server=/gdcts.com/114.114.114.114
 server=/gdctsvisa.com/114.114.114.114
 server=/gdcxc2c.com/114.114.114.114
 server=/gdcyl.org/114.114.114.114
+server=/gdczkj.com/114.114.114.114
 server=/gdczyy.com/114.114.114.114
 server=/gddata.net/114.114.114.114
 server=/gddcm.com/114.114.114.114
