accelerated-domains: add gddysl.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -33923,6 +33923,7 @@ server=/gddqfs.net/114.114.114.114
 server=/gddrcgzjt.com/114.114.114.114
 server=/gddtop.com/114.114.114.114
 server=/gddyhb168.com/114.114.114.114
+server=/gddysl.com/114.114.114.114
 server=/gdeams.com/114.114.114.114
 server=/gdebidding.com/114.114.114.114
 server=/gdecn.com/114.114.114.114
