accelerated-domains: add gdeia.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -33929,6 +33929,7 @@ server=/gdebidding.com/114.114.114.114
 server=/gdecn.com/114.114.114.114
 server=/gdedu123.com/114.114.114.114
 server=/gdefair.com/114.114.114.114
+server=/gdeia.com/114.114.114.114
 server=/gdems.com/114.114.114.114
 server=/gdevops.com/114.114.114.114
 server=/gdfc0563.com/114.114.114.114
