--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -35170,6 +35170,7 @@ server=/glsadt.com/114.114.114.114
 server=/glsanhua.com/114.114.114.114
 server=/glsanyang.com/114.114.114.114
 server=/glsdhnt.com/114.114.114.114
+server=/glseed.com/114.114.114.114
 server=/glsgmr.com/114.114.114.114
 server=/glshimg.com/114.114.114.114
 server=/glsmy024.com/114.114.114.114
