--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -45183,6 +45183,7 @@ server=/hx99.net/114.114.114.114
 server=/hxage.com/114.114.114.114
 server=/hxbdf120.com/114.114.114.114
 server=/hxbdxled.com/114.114.114.114
+server=/hxbl.com/114.114.114.114
 server=/hxbsth.com/114.114.114.114
 server=/hxbus.net/114.114.114.114
 server=/hxc-power.com/114.114.114.114
