accelerated-domains: add kenxon.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -53695,6 +53695,7 @@ server=/kentier.com/114.114.114.114
 server=/kentxxq.com/114.114.114.114
 server=/kenuonet.com/114.114.114.114
 server=/kenweini.com/114.114.114.114
+server=/kenxon.com/114.114.114.114
 server=/kenzochina.com/114.114.114.114
 server=/keoaeic.org/114.114.114.114
 server=/keovo.net/114.114.114.114
