accelerated-domains: add qiaoyinkg.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -70120,6 +70120,7 @@ server=/qiaosidea.com/114.114.114.114
 server=/qiaotu.com/114.114.114.114
 server=/qiaoxuanhong.com/114.114.114.114
 server=/qiaoyi.org/114.114.114.114
+server=/qiaoyinkg.com/114.114.114.114
 server=/qiaoyue66.com/114.114.114.114
 server=/qiaozhuangjia.com/114.114.114.114
 server=/qiaozs.com/114.114.114.114
