accelerated-domains: add yuexinship.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -99230,6 +99230,7 @@ server=/yuexiangspace.com/114.114.114.114
 server=/yuexindianqi.com/114.114.114.114
 server=/yuexing.com/114.114.114.114
 server=/yuexinli.com/114.114.114.114
+server=/yuexinship.com/114.114.114.114
 server=/yuexirc.com/114.114.114.114
 server=/yuexiu-finance.com/114.114.114.114
 server=/yuexiu.com/114.114.114.114
