--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -99220,6 +99220,7 @@ server=/yuetongjt.com/114.114.114.114
 server=/yuetu.tech/114.114.114.114
 server=/yuetuvip.com/114.114.114.114
 server=/yuetuvip.net/114.114.114.114
+server=/yuewanggd.com/114.114.114.114
 server=/yueweimusic.com/114.114.114.114
 server=/yuewen.com/114.114.114.114
 server=/yuewz.com/114.114.114.114
