--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -25462,6 +25462,7 @@ server=/dbdna.com/114.114.114.114
 server=/dbgeek.org/114.114.114.114
 server=/dbh123.net/114.114.114.114
 server=/dbiej.com/114.114.114.114
+server=/dbjsjt.com/114.114.114.114
 server=/dbkan.com/114.114.114.114
 server=/dbkuaizi.com/114.114.114.114
 server=/dblgf.com/114.114.114.114
