--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -34174,6 +34174,7 @@ server=/gdzhcx.com/114.114.114.114
 server=/gdzhenxing.com/114.114.114.114
 server=/gdzhiding.com/114.114.114.114
 server=/gdzhonghua.com/114.114.114.114
+server=/gdzhongpeng.com/114.114.114.114
 server=/gdzhongshan.com/114.114.114.114
 server=/gdzjdl.com/114.114.114.114
 server=/gdzp.org/114.114.114.114
