--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -53680,6 +53680,7 @@ server=/ken.io/114.114.114.114
 server=/kename.com/114.114.114.114
 server=/kendingde.com/114.114.114.114
 server=/kendryte.com/114.114.114.114
+server=/kenflo.com/114.114.114.114
 server=/kenfor.com/114.114.114.114
 server=/kengatoki.com/114.114.114.114
 server=/kengdodo.com/114.114.114.114
