accelerated-domains: add sznecn.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -81064,6 +81064,7 @@ server=/szmywin.com/114.114.114.114
 server=/szmyxc.com/114.114.114.114
 server=/szn360.com/114.114.114.114
 server=/sznaibeng.com/114.114.114.114
+server=/sznecn.com/114.114.114.114
 server=/sznews.com/114.114.114.114
 server=/sznffc.com/114.114.114.114
 server=/sznfwt.net/114.114.114.114
