accelerated-domains: add sfqzj.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -75228,6 +75228,7 @@ server=/sfndns.com/114.114.114.114
 server=/sforest.in/114.114.114.114
 server=/sfpgmk.com/114.114.114.114
 server=/sfplay.net/114.114.114.114
+server=/sfqzj.com/114.114.114.114
 server=/sfrmt.com/114.114.114.114
 server=/sfs-cn.com/114.114.114.114
 server=/sfshuiwu.com/114.114.114.114
