--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -86944,6 +86944,7 @@ server=/vmonkey.mobi/114.114.114.114
 server=/vmovier.cc/114.114.114.114
 server=/vmoviercdn.com/114.114.114.114
 server=/vmsky.com/114.114.114.114
+server=/vmtdf.com/114.114.114.114
 server=/vmtnet.com/114.114.114.114
 server=/vmvps.com/114.114.114.114
 server=/vmylan.com/114.114.114.114
