accelerated-domains: add zgjinglong.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -101009,6 +101009,7 @@ server=/zgjhjy.com/114.114.114.114
 server=/zgjiaoyan.com/114.114.114.114
 server=/zgjiayang.com/114.114.114.114
 server=/zgjiemeng.com/114.114.114.114
+server=/zgjinglong.com/114.114.114.114
 server=/zgjjzyjy.org/114.114.114.114
 server=/zgjl123.com/114.114.114.114
 server=/zgjm.net/114.114.114.114
