accelerated-domains: add dgyian.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -26192,6 +26192,7 @@ server=/dgxzxjj.com/114.114.114.114
 server=/dgyanda.com/114.114.114.114
 server=/dgyejia.com/114.114.114.114
 server=/dgyhsb.com/114.114.114.114
+server=/dgyian.com/114.114.114.114
 server=/dgykz.com/114.114.114.114
 server=/dgyq-water.com/114.114.114.114
 server=/dgytdz.com/114.114.114.114
