accelerated-domains: add gdlaoan.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -34004,6 +34004,7 @@ server=/gdks168.com/114.114.114.114
 server=/gdkszx.com/114.114.114.114
 server=/gdkxpcb.com/114.114.114.114
 server=/gdkz88.com/114.114.114.114
+server=/gdlaoan.com/114.114.114.114
 server=/gdlgsw.com/114.114.114.114
 server=/gdlighting.com/114.114.114.114
 server=/gdlinefly.com/114.114.114.114
