accelerated-domains: add jinyuanlight.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -50563,6 +50563,7 @@ server=/jinyuan.pro/114.114.114.114
 server=/jinyuanbiochem.com/114.114.114.114
 server=/jinyuancopper.com/114.114.114.114
 server=/jinyuangejiaju.com/114.114.114.114
+server=/jinyuanlight.com/114.114.114.114
 server=/jinyuesc.com/114.114.114.114
 server=/jinyunal.com/114.114.114.114
 server=/jinyunweb.com/114.114.114.114
