accelerated-domains: add rongtongworld.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -73066,6 +73066,7 @@ server=/rongshuxia.com/114.114.114.114
 server=/rongstone.com/114.114.114.114
 server=/rongtai-arch.com/114.114.114.114
 server=/rongtai-china.com/114.114.114.114
+server=/rongtongworld.com/114.114.114.114
 server=/rongxinzh.com/114.114.114.114
 server=/rongyan.cc/114.114.114.114
 server=/rongyanshe.com/114.114.114.114
