accelerated-domains: add gdjinzong.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -33982,6 +33982,7 @@ server=/gdjdxy.com/114.114.114.114
 server=/gdjiabao.com/114.114.114.114
 server=/gdjinge.com/114.114.114.114
 server=/gdjingte.com/114.114.114.114
+server=/gdjinzong.com/114.114.114.114
 server=/gdjiutu.com/114.114.114.114
 server=/gdjktk.com/114.114.114.114
 server=/gdjky.com/114.114.114.114
