accelerated-domains: add gdnhci.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -34031,6 +34031,7 @@ server=/gdnd2016.com/114.114.114.114
 server=/gdnengyuan.com/114.114.114.114
 server=/gdnewmedia.cc/114.114.114.114
 server=/gdnfzb.com/114.114.114.114
+server=/gdnhci.com/114.114.114.114
 server=/gdniubang.com/114.114.114.114
 server=/gdnybank.com/114.114.114.114
 server=/gdofun.com/114.114.114.114
