accelerated-domains: add gdnjuae.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -34033,6 +34033,7 @@ server=/gdnewmedia.cc/114.114.114.114
 server=/gdnfzb.com/114.114.114.114
 server=/gdnhci.com/114.114.114.114
 server=/gdniubang.com/114.114.114.114
+server=/gdnjuae.com/114.114.114.114
 server=/gdnybank.com/114.114.114.114
 server=/gdofun.com/114.114.114.114
 server=/gdoip.com/114.114.114.114
