--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -39277,6 +39277,7 @@ server=/gzhzcj.com/114.114.114.114
 server=/gzidc.com/114.114.114.114
 server=/gzitwm.net/114.114.114.114
 server=/gzj568.com/114.114.114.114
+server=/gzjbjx.com/114.114.114.114
 server=/gzjc2016.com/114.114.114.114
 server=/gzjeeseng.com/114.114.114.114
 server=/gzjgpy.com/114.114.114.114
