accelerated-domains: add jevolpu.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -49289,6 +49289,7 @@ server=/jetsum.com/114.114.114.114
 server=/jetsum.net/114.114.114.114
 server=/jeuzmk.com/114.114.114.114
 server=/jev0n.com/114.114.114.114
+server=/jevolpu.com/114.114.114.114
 server=/jewellery.gold/114.114.114.114
 server=/jewellworld.com/114.114.114.114
 server=/jewelryseeds.com/114.114.114.114
