--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -35314,6 +35314,7 @@ server=/gmugmu.com/114.114.114.114
 server=/gmwiki.com/114.114.114.114
 server=/gmxmym.ren/114.114.114.114
 server=/gmyihua.com/114.114.114.114
+server=/gmylj.com/114.114.114.114
 server=/gmzhushou.com/114.114.114.114
 server=/gmzi.com/114.114.114.114
 server=/gmzm.org/114.114.114.114
