accelerated-domains: add gdzyinvest.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -34196,6 +34196,7 @@ server=/gdzxmm.com/114.114.114.114
 server=/gdzy5413.com/114.114.114.114
 server=/gdzygroup.com/114.114.114.114
 server=/gdzygy.com/114.114.114.114
+server=/gdzyinvest.com/114.114.114.114
 server=/gdzz114.com/114.114.114.114
 server=/gdzzjc.com/114.114.114.114
 server=/gdzzz.com/114.114.114.114
