--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -11784,6 +11784,7 @@ server=/apsgo.com/114.114.114.114
 server=/aptchina.com/114.114.114.114
 server=/aptchip.com/114.114.114.114
 server=/aptenon.com/114.114.114.114
+server=/apubond.com/114.114.114.114
 server=/apusic.com/114.114.114.114
 server=/apwuyou.com/114.114.114.114
 server=/apxm.net/114.114.114.114
