--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -26627,6 +26627,7 @@ server=/dinghaiec.com/114.114.114.114
 server=/dinghantech.com/114.114.114.114
 server=/dinghegc.com/114.114.114.114
 server=/dinghengjc.com/114.114.114.114
+server=/dinghu.com/114.114.114.114
 server=/dinghuakuai.com/114.114.114.114
 server=/dinghuaren.com/114.114.114.114
 server=/dinghui.org/114.114.114.114
