--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -33849,6 +33849,7 @@ server=/gd-chenxing.com/114.114.114.114
 server=/gd-chuangfu.com/114.114.114.114
 server=/gd-dl.com/114.114.114.114
 server=/gd-haijing.com/114.114.114.114
+server=/gd-hcsj.com/114.114.114.114
 server=/gd-hskj.com/114.114.114.114
 server=/gd-hstech.com/114.114.114.114
 server=/gd-huadi.com/114.114.114.114
