--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -33855,6 +33855,7 @@ server=/gd-hstech.com/114.114.114.114
 server=/gd-huadi.com/114.114.114.114
 server=/gd-id.com/114.114.114.114
 server=/gd-jinzhanggui.com/114.114.114.114
+server=/gd-kexin.com/114.114.114.114
 server=/gd-lekai.com/114.114.114.114
 server=/gd-linux.com/114.114.114.114
 server=/gd-linux.org/114.114.114.114
