--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -33925,6 +33925,7 @@ server=/gddidg.com/114.114.114.114
 server=/gddikasi.com/114.114.114.114
 server=/gddingxin.com/114.114.114.114
 server=/gddjauto.com/114.114.114.114
+server=/gddlaaa.com/114.114.114.114
 server=/gddmsmc.com/114.114.114.114
 server=/gddqfs.com/114.114.114.114
 server=/gddqfs.net/114.114.114.114
