accelerated-domains: add gdhuaxun.net

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -33974,6 +33974,7 @@ server=/gdhjzs.com/114.114.114.114
 server=/gdhsbid.com/114.114.114.114
 server=/gdhtcm.com/114.114.114.114
 server=/gdhuana.com/114.114.114.114
+server=/gdhuaxun.net/114.114.114.114
 server=/gdhwater.com/114.114.114.114
 server=/gdhwjl.com/114.114.114.114
 server=/gdhxgf.com/114.114.114.114
