accelerated-domains: add gdnyjt.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -34042,6 +34042,7 @@ server=/gdnhci.com/114.114.114.114
 server=/gdniubang.com/114.114.114.114
 server=/gdnjuae.com/114.114.114.114
 server=/gdnybank.com/114.114.114.114
+server=/gdnyjt.com/114.114.114.114
 server=/gdofun.com/114.114.114.114
 server=/gdoip.com/114.114.114.114
 server=/gdokpackaging.com/114.114.114.114
