--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -34054,6 +34054,7 @@ server=/gdpengquan.com/114.114.114.114
 server=/gdpia.com/114.114.114.114
 server=/gdpingzheng.com/114.114.114.114
 server=/gdprm.com/114.114.114.114
+server=/gdqianliang.com/114.114.114.114
 server=/gdqianyou.com/114.114.114.114
 server=/gdqxjt.com/114.114.114.114
 server=/gdqynews.com/114.114.114.114
