--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -34074,6 +34074,7 @@ server=/gds-services.com/114.114.114.114
 server=/gdsa.com/114.114.114.114
 server=/gdsaipu.com/114.114.114.114
 server=/gdsalt.com/114.114.114.114
+server=/gdsanling.com/114.114.114.114
 server=/gdscse.net/114.114.114.114
 server=/gdsday.com/114.114.114.114
 server=/gdsdays.com/114.114.114.114
