--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -54469,6 +54469,7 @@ server=/kpkpw.com/114.114.114.114
 server=/kplanet.vip/114.114.114.114
 server=/kpmqg.com/114.114.114.114
 server=/kpoll.net/114.114.114.114
+server=/kppcsem.com/114.114.114.114
 server=/kprepublic.com/114.114.114.114
 server=/kpt5.com/114.114.114.114
 server=/kpwcmb.com/114.114.114.114
