--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -89639,6 +89639,7 @@ server=/winnerracing.com/114.114.114.114
 server=/winnerway.com/114.114.114.114
 server=/winnet.cc/114.114.114.114
 server=/winning11cn.com/114.114.114.114
+server=/winningdq.com/114.114.114.114
 server=/winnyefanho.net/114.114.114.114
 server=/winotes.net/114.114.114.114
 server=/winotmk.com/114.114.114.114
