accelerated-domains: add chinapelletizer.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -20320,6 +20320,7 @@ server=/chinapbw.com/114.114.114.114
 server=/chinape168.com/114.114.114.114
 server=/chinapeelingmachine.com/114.114.114.114
 server=/chinapeier.com/114.114.114.114
+server=/chinapelletizer.com/114.114.114.114
 server=/chinapeople.com/114.114.114.114
 server=/chinapet.com/114.114.114.114
 server=/chinapet.net/114.114.114.114
