accelerated-domains: add gddianchuang.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -33922,6 +33922,7 @@ server=/gddcm.com/114.114.114.114
 server=/gddg-hy.com/114.114.114.114
 server=/gddg.cc/114.114.114.114
 server=/gddhn.com/114.114.114.114
+server=/gddianchuang.com/114.114.114.114
 server=/gddidg.com/114.114.114.114
 server=/gddikasi.com/114.114.114.114
 server=/gddingxin.com/114.114.114.114
