--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -51114,6 +51114,7 @@ server=/jlcsmt.com/114.114.114.114
 server=/jldjam.com/114.114.114.114
 server=/jlfjz.com/114.114.114.114
 server=/jlg66.com/114.114.114.114
+server=/jlgf.com/114.114.114.114
 server=/jlgjjt.com/114.114.114.114
 server=/jlguorui.com/114.114.114.114
 server=/jlguowen.com/114.114.114.114
