--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -84019,6 +84019,7 @@ server=/toysir.com/114.114.114.114
 server=/toysol.com/114.114.114.114
 server=/tozzger.info/114.114.114.114
 server=/tp-data.com/114.114.114.114
+server=/tp-hivi.com/114.114.114.114
 server=/tp82.com/114.114.114.114
 server=/tpadx.com/114.114.114.114
 server=/tpbankvn.com/114.114.114.114
