--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -89527,6 +89527,7 @@ server=/wilhb.com/114.114.114.114
 server=/willapps.com/114.114.114.114
 server=/willcdn.com/114.114.114.114
 server=/williamslullaby.com/114.114.114.114
+server=/willingchina.com/114.114.114.114
 server=/willnanobio.com/114.114.114.114
 server=/willsemi.com/114.114.114.114
 server=/willsfitness.net/114.114.114.114
