accelerated-domains: add epsea.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -29984,6 +29984,7 @@ server=/epoch168.com/114.114.114.114
 server=/epoos.com/114.114.114.114
 server=/eprcw.com/114.114.114.114
 server=/eprezi.com/114.114.114.114
+server=/epsea.com/114.114.114.114
 server=/epsonconnect.com/114.114.114.114
 server=/epstsoft.com/114.114.114.114
 server=/epsvh.com/114.114.114.114
