--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -33933,6 +33933,7 @@ server=/gddmsmc.com/114.114.114.114
 server=/gddqfs.com/114.114.114.114
 server=/gddqfs.net/114.114.114.114
 server=/gddrcgzjt.com/114.114.114.114
+server=/gddsjt.com/114.114.114.114
 server=/gddtop.com/114.114.114.114
 server=/gddyhb168.com/114.114.114.114
 server=/gddysl.com/114.114.114.114
