--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -15849,6 +15849,7 @@ server=/bluestep.cc/114.114.114.114
 server=/bluetime.com/114.114.114.114
 server=/bluewhaleremote.com/114.114.114.114
 server=/blw.moe/114.114.114.114
+server=/blwire.com/114.114.114.114
 server=/blxfc.com/114.114.114.114
 server=/blxs.info/114.114.114.114
 server=/blxs.la/114.114.114.114
