--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -52000,6 +52000,7 @@ server=/jsthjsgc.com/114.114.114.114
 server=/jsti.com/114.114.114.114
 server=/jstianniao.com/114.114.114.114
 server=/jstide.com/114.114.114.114
+server=/jstigd.com/114.114.114.114
 server=/jstlcyy.com/114.114.114.114
 server=/jstlgn.com/114.114.114.114
 server=/jstore.site/114.114.114.114
