accelerated-domains: add walkkind.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -87519,6 +87519,7 @@ server=/walk-live.com/114.114.114.114
 server=/walker-fan.com/114.114.114.114
 server=/walkera.com/114.114.114.114
 server=/walkingpad.com/114.114.114.114
+server=/walkkind.com/114.114.114.114
 server=/walknode.com/114.114.114.114
 server=/walkthechat.com/114.114.114.114
 server=/wallba.com/114.114.114.114
