accelerated-domains: add championasia.hk

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -19057,6 +19057,7 @@ server=/chamei.com/114.114.114.114
 server=/chameiwang.com/114.114.114.114
 server=/chamiji.com/114.114.114.114
 server=/champconsult.com/114.114.114.114
+server=/championasia.hk/114.114.114.114
 server=/championmkt.com/114.114.114.114
 server=/championunion.com/114.114.114.114
 server=/champsely.com/114.114.114.114
