--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -30407,6 +30407,7 @@ server=/evotrue.com/114.114.114.114
 server=/evpartner.com/114.114.114.114
 server=/evpowergroup.com/114.114.114.114
 server=/evqvxuq.com/114.114.114.114
+server=/evtcn.com/114.114.114.114
 server=/evv1.com/114.114.114.114
 server=/evyy.net/114.114.114.114
 server=/evzhidao.com/114.114.114.114
