accelerated-domains: add gddz0769.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -33940,6 +33940,7 @@ server=/gddsjt.com/114.114.114.114
 server=/gddtop.com/114.114.114.114
 server=/gddyhb168.com/114.114.114.114
 server=/gddysl.com/114.114.114.114
+server=/gddz0769.com/114.114.114.114
 server=/gdeams.com/114.114.114.114
 server=/gdebidding.com/114.114.114.114
 server=/gdecn.com/114.114.114.114
