--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -33986,6 +33986,7 @@ server=/gdhuaxun.net/114.114.114.114
 server=/gdhwater.com/114.114.114.114
 server=/gdhwjl.com/114.114.114.114
 server=/gdhxgf.com/114.114.114.114
+server=/gdhzsb.com/114.114.114.114
 server=/gdicoou.com/114.114.114.114
 server=/gdie.com/114.114.114.114
 server=/gdinfo.net/114.114.114.114
