accelerated-domains: add gdweilaisw.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -34151,6 +34151,7 @@ server=/gdwbyq.com/114.114.114.114
 server=/gdwca.com/114.114.114.114
 server=/gdwczb.com/114.114.114.114
 server=/gdwdtz.com/114.114.114.114
+server=/gdweilaisw.com/114.114.114.114
 server=/gdwlcloud.com/114.114.114.114
 server=/gdwld.com/114.114.114.114
 server=/gdwlife.com/114.114.114.114
