accelerated-domains: add homsoboard.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -43128,6 +43128,7 @@ server=/homeyao.com/114.114.114.114
 server=/hommk.com/114.114.114.114
 server=/homolo.com/114.114.114.114
 server=/homolo.net/114.114.114.114
+server=/homsoboard.com/114.114.114.114
 server=/homsuncap.com/114.114.114.114
 server=/homylogistics.com/114.114.114.114
 server=/homyu.com/114.114.114.114
