accelerated-domains: add huixinggroup.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -44768,6 +44768,7 @@ server=/huixiangtiandi.com/114.114.114.114
 server=/huixiaoer.com/114.114.114.114
 server=/huixiaoer.net/114.114.114.114
 server=/huixineducation.com/114.114.114.114
+server=/huixinggroup.com/114.114.114.114
 server=/huixingsoft.com/114.114.114.114
 server=/huixinli.com/114.114.114.114
 server=/huixinmed.com/114.114.114.114
