--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -64457,6 +64457,7 @@ server=/nimolife.com/114.114.114.114
 server=/nimotion.com/114.114.114.114
 server=/nimzx.com/114.114.114.114
 server=/nindeli.com/114.114.114.114
+server=/nine-rivers.com/114.114.114.114
 server=/ninebot.com/114.114.114.114
 server=/ninecoign.com/114.114.114.114
 server=/nineplaying.com/114.114.114.114
