accelerated-domains: add saheo.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -73777,6 +73777,7 @@ server=/sagetrc.com/114.114.114.114
 server=/sagigame.net/114.114.114.114
 server=/sagw.com/114.114.114.114
 server=/sahcqmu.com/114.114.114.114
+server=/saheo.com/114.114.114.114
 server=/sahqoo.com/114.114.114.114
 server=/saibeiip.com/114.114.114.114
 server=/saibeinews.com/114.114.114.114
