accelerated-domains: add chaohuatech.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -19183,6 +19183,7 @@ server=/chaofanshuma.com/114.114.114.114
 server=/chaofantian.com/114.114.114.114
 server=/chaogejiaoyu.com/114.114.114.114
 server=/chaogu1688.com/114.114.114.114
+server=/chaohuatech.com/114.114.114.114
 server=/chaohuishou.com/114.114.114.114
 server=/chaoji.com/114.114.114.114
 server=/chaojibiaoge.com/114.114.114.114
