accelerated-domains: add gdveren.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -34146,6 +34146,7 @@ server=/gdunt.com/114.114.114.114
 server=/gdupi.com/114.114.114.114
 server=/gdus.cc/114.114.114.114
 server=/gdutbbs.com/114.114.114.114
+server=/gdveren.com/114.114.114.114
 server=/gdvolunteer.net/114.114.114.114
 server=/gdwanshun.com/114.114.114.114
 server=/gdwbyq.com/114.114.114.114
