accelerated-domains: add st-jzx.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -79373,6 +79373,7 @@ server=/sszjnc.com/114.114.114.114
 server=/sszsj.cc/114.114.114.114
 server=/ssztcm.com/114.114.114.114
 server=/sszxiangce.com/114.114.114.114
+server=/st-jzx.com/114.114.114.114
 server=/st-recovery.com/114.114.114.114
 server=/st001.com/114.114.114.114
 server=/st12121.net/114.114.114.114
