--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -26155,6 +26155,7 @@ server=/dgozp.com/114.114.114.114
 server=/dgpenghao.com/114.114.114.114
 server=/dgphospital.com/114.114.114.114
 server=/dgptjob.com/114.114.114.114
+server=/dgqianguan.com/114.114.114.114
 server=/dgqjj.com/114.114.114.114
 server=/dgrbcj.com/114.114.114.114
 server=/dgrcw.com/114.114.114.114
