--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -33959,6 +33959,7 @@ server=/gdfplaza.com/114.114.114.114
 server=/gdfs.com/114.114.114.114
 server=/gdfshx.com/114.114.114.114
 server=/gdfuji.com/114.114.114.114
+server=/gdganhua.com/114.114.114.114
 server=/gdgassoc.com/114.114.114.114
 server=/gdggkf.com/114.114.114.114
 server=/gdghg.com/114.114.114.114
