accelerated-domains: add gdlkjt.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -34032,6 +34032,7 @@ server=/gdlinefly.com/114.114.114.114
 server=/gdlingjie.net/114.114.114.114
 server=/gdlins.com/114.114.114.114
 server=/gdliontech.com/114.114.114.114
+server=/gdlkjt.com/114.114.114.114
 server=/gdlmetc.com/114.114.114.114
 server=/gdlsgz.com/114.114.114.114
 server=/gdlswl.com/114.114.114.114
