accelerated-domains: add gsl.cc

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -36086,6 +36086,7 @@ server=/gskfzxyy.com/114.114.114.114
 server=/gskjpt.com/114.114.114.114
 server=/gsktraining.com/114.114.114.114
 server=/gskwai.com/114.114.114.114
+server=/gsl.cc/114.114.114.114
 server=/gslbdns.com/114.114.114.114
 server=/gslbdns.net/114.114.114.114
 server=/gslmw.net/114.114.114.114
