--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -96297,6 +96297,7 @@ server=/yczyc.com/114.114.114.114
 server=/yd-data.com/114.114.114.114
 server=/yd126.com/114.114.114.114
 server=/yd166.com/114.114.114.114
+server=/ydalison.com/114.114.114.114
 server=/ydamc.com/114.114.114.114
 server=/ydbimg.com/114.114.114.114
 server=/ydbmed.com/114.114.114.114
