--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -33924,6 +33924,7 @@ server=/gdcyl.org/114.114.114.114
 server=/gdczkj.com/114.114.114.114
 server=/gdczyy.com/114.114.114.114
 server=/gddata.net/114.114.114.114
+server=/gddcjt.com/114.114.114.114
 server=/gddcm.com/114.114.114.114
 server=/gddg-hy.com/114.114.114.114
 server=/gddg.cc/114.114.114.114
