accelerated-domains: add king-strong.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -53935,6 +53935,7 @@ server=/kindlelib.com/114.114.114.114
 server=/kindobest.com/114.114.114.114
 server=/king-capital.com/114.114.114.114
 server=/king-rain.com/114.114.114.114
+server=/king-strong.com/114.114.114.114
 server=/kingandwood.com/114.114.114.114
 server=/kingarad.com/114.114.114.114
 server=/kingbank.com/114.114.114.114
