--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -13168,6 +13168,7 @@ server=/bakstotre.com/114.114.114.114
 server=/bala.cc/114.114.114.114
 server=/balance-net.com/114.114.114.114
 server=/baldc.com/114.114.114.114
+server=/baldor-tech.com/114.114.114.114
 server=/bale25.xyz/114.114.114.114
 server=/baletu.com/114.114.114.114
 server=/balift.com/114.114.114.114
