--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -26550,6 +26550,7 @@ server=/digitalmanu.com/114.114.114.114
 server=/digitalvolvo.com/114.114.114.114
 server=/digitalwuhan.com/114.114.114.114
 server=/digitalwuhan.net/114.114.114.114
+server=/digitguangdong.com/114.114.114.114
 server=/digitimetech.com/114.114.114.114
 server=/digitlink.net/114.114.114.114
 server=/digitser.net/114.114.114.114
