--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -32689,6 +32689,7 @@ server=/fs7000.com/114.114.114.114
 server=/fsabwy.com/114.114.114.114
 server=/fsb-bearing.com/114.114.114.114
 server=/fsbankonline.com/114.114.114.114
+server=/fsbldjd.com/114.114.114.114
 server=/fsbqgd.com/114.114.114.114
 server=/fsccjy.com/114.114.114.114
 server=/fsccyy.com/114.114.114.114
