--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -34115,6 +34115,7 @@ server=/gdstc.group/114.114.114.114
 server=/gdstie.com/114.114.114.114
 server=/gdstlab.com/114.114.114.114
 server=/gdsugar.com/114.114.114.114
+server=/gdsunfly.com/114.114.114.114
 server=/gdsuxie.com/114.114.114.114
 server=/gdswgc.com/114.114.114.114
 server=/gdswine.com/114.114.114.114
