accelerated-domains: add huamaorice.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -44160,6 +44160,7 @@ server=/hualv.com/114.114.114.114
 server=/huaman.pub/114.114.114.114
 server=/huamanlou.cc/114.114.114.114
 server=/huamaobook.com/114.114.114.114
+server=/huamaorice.com/114.114.114.114
 server=/huamaoshuo.com/114.114.114.114
 server=/huameili.net/114.114.114.114
 server=/huameiyuezi.com/114.114.114.114
