--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -50645,6 +50645,7 @@ server=/jirehhz.com/114.114.114.114
 server=/jirengu.com/114.114.114.114
 server=/jiri10.com/114.114.114.114
 server=/jiri28.com/114.114.114.114
+server=/jirong.com/114.114.114.114
 server=/jirongyunke.net/114.114.114.114
 server=/jirou.com/114.114.114.114
 server=/jirry.me/114.114.114.114
