accelerated-domains: add antgv.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -11328,6 +11328,7 @@ server=/antfinancial-corp.com/114.114.114.114
 server=/antforecast.com/114.114.114.114
 server=/antfortune.com/114.114.114.114
 server=/antgroup.com/114.114.114.114
+server=/antgv.com/114.114.114.114
 server=/antibanads.com/114.114.114.114
 server=/antibodychina.com/114.114.114.114
 server=/anticheatexpert.com/114.114.114.114
