accelerated-domains: add gdgowe.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -33971,6 +33971,7 @@ server=/gdggkf.com/114.114.114.114
 server=/gdghg.com/114.114.114.114
 server=/gdgkfn.com/114.114.114.114
 server=/gdgkty.com/114.114.114.114
+server=/gdgowe.com/114.114.114.114
 server=/gdgpc.net/114.114.114.114
 server=/gdgrsw.com/114.114.114.114
 server=/gdguangdong.com/114.114.114.114
