--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -34043,6 +34043,7 @@ server=/gdlkjt.com/114.114.114.114
 server=/gdlmetc.com/114.114.114.114
 server=/gdlsgz.com/114.114.114.114
 server=/gdlswl.com/114.114.114.114
+server=/gdly-motor.com/114.114.114.114
 server=/gdmagam.com/114.114.114.114
 server=/gdmain.com/114.114.114.114
 server=/gdmm.com/114.114.114.114
