accelerated-domains: add gdlz.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -34044,6 +34044,7 @@ server=/gdlmetc.com/114.114.114.114
 server=/gdlsgz.com/114.114.114.114
 server=/gdlswl.com/114.114.114.114
 server=/gdly-motor.com/114.114.114.114
+server=/gdlz.com/114.114.114.114
 server=/gdmagam.com/114.114.114.114
 server=/gdmain.com/114.114.114.114
 server=/gdmm.com/114.114.114.114
