accelerated-domains: add kinglymotor.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -53988,6 +53988,7 @@ server=/kingkaid.com/114.114.114.114
 server=/kingland119.com/114.114.114.114
 server=/kinglawv.com/114.114.114.114
 server=/kingliton.com/114.114.114.114
+server=/kinglymotor.com/114.114.114.114
 server=/kinglyuan.com/114.114.114.114
 server=/kingmagic.co/114.114.114.114
 server=/kingmagnet.com/114.114.114.114
