accelerated-domains: add optomedic.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -66895,6 +66895,7 @@ server=/optimized-ai.com/114.114.114.114
 server=/optinetchina.com/114.114.114.114
 server=/optmv.com/114.114.114.114
 server=/optol.net/114.114.114.114
+server=/optomedic.com/114.114.114.114
 server=/optuk2.com/114.114.114.114
 server=/optzmx.com/114.114.114.114
 server=/opus-gaming.com/114.114.114.114
