--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -69130,6 +69130,7 @@ server=/proresearch.org/114.114.114.114
 server=/pros-view.com/114.114.114.114
 server=/prositsole.com/114.114.114.114
 server=/prosper3e.com/114.114.114.114
+server=/prostar-cn.com/114.114.114.114
 server=/protect-file.com/114.114.114.114
 server=/protontechcn.com/114.114.114.114
 server=/proup.club/114.114.114.114
