--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -33989,6 +33989,7 @@ server=/gdhfny.com/114.114.114.114
 server=/gdhhgroup.com/114.114.114.114
 server=/gdhhjs.net/114.114.114.114
 server=/gdhjzs.com/114.114.114.114
+server=/gdhongsha.com/114.114.114.114
 server=/gdhsbid.com/114.114.114.114
 server=/gdhtcm.com/114.114.114.114
 server=/gdhuana.com/114.114.114.114
