accelerated-domains: add gdxinxiang.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -34180,6 +34180,7 @@ server=/gdxdy.com/114.114.114.114
 server=/gdxfl.com/114.114.114.114
 server=/gdxindun.com/114.114.114.114
 server=/gdxinqiang168.com/114.114.114.114
+server=/gdxinxiang.com/114.114.114.114
 server=/gdxise.com/114.114.114.114
 server=/gdxmsx.com/114.114.114.114
 server=/gdxrtc.com/114.114.114.114
