--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -54198,6 +54198,7 @@ server=/klandk.com/114.114.114.114
 server=/klbn100.com/114.114.114.114
 server=/klchemicals.net/114.114.114.114
 server=/klclear.com/114.114.114.114
+server=/kldhq.com/114.114.114.114
 server=/kldjy.com/114.114.114.114
 server=/kldmm.com/114.114.114.114
 server=/klhuyan.com/114.114.114.114
