--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -74826,6 +74826,7 @@ server=/sdss99.fun/114.114.114.114
 server=/sdssiliao.com/114.114.114.114
 server=/sdstdc.com/114.114.114.114
 server=/sdstslyy.com/114.114.114.114
+server=/sdswitch.com/114.114.114.114
 server=/sdswtz.com/114.114.114.114
 server=/sdsxwz.net/114.114.114.114
 server=/sdsytgcl.com/114.114.114.114
