--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -34132,6 +34132,7 @@ server=/gdsyy.org/114.114.114.114
 server=/gdszjgdj.org/114.114.114.114
 server=/gdszkw.com/114.114.114.114
 server=/gdszsl.com/114.114.114.114
+server=/gdszyjt.com/114.114.114.114
 server=/gdtaihao.com/114.114.114.114
 server=/gdtcyy.com/114.114.114.114
 server=/gdtengen.com/114.114.114.114
