--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -41177,6 +41177,7 @@ server=/hdavchina.com/114.114.114.114
 server=/hdb.com/114.114.114.114
 server=/hdbaichuan.com/114.114.114.114
 server=/hdbgjt.com/114.114.114.114
+server=/hdbp.com/114.114.114.114
 server=/hdbus.net/114.114.114.114
 server=/hdcms.net/114.114.114.114
 server=/hdcolorant.com/114.114.114.114
