--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -79006,6 +79006,7 @@ server=/sowang.com/114.114.114.114
 server=/soweather.com/114.114.114.114
 server=/sowellwell.com/114.114.114.114
 server=/sowin.com/114.114.114.114
+server=/sowotech.com/114.114.114.114
 server=/sowu.com/114.114.114.114
 server=/soxsok.com/114.114.114.114
 server=/soyim.com/114.114.114.114
