--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -85798,6 +85798,7 @@ server=/unistc.com/114.114.114.114
 server=/unistrong.com/114.114.114.114
 server=/unistrument.com/114.114.114.114
 server=/uniswdc.com/114.114.114.114
+server=/unitaxgd.com/114.114.114.114
 server=/unitconverter.cc/114.114.114.114
 server=/united-bearing.com/114.114.114.114
 server=/united-sqwater.com/114.114.114.114
