--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -33985,6 +33985,7 @@ server=/gdhbsh.com/114.114.114.114
 server=/gdhchina.com/114.114.114.114
 server=/gdhcsh.com/114.114.114.114
 server=/gdhdbxg.com/114.114.114.114
+server=/gdhfkg.com/114.114.114.114
 server=/gdhfny.com/114.114.114.114
 server=/gdhhgroup.com/114.114.114.114
 server=/gdhhjs.net/114.114.114.114
