accelerated-domains: add gdkjk56.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -34029,6 +34029,7 @@ server=/gdkailin.com/114.114.114.114
 server=/gdkepler.com/114.114.114.114
 server=/gdkingma.com/114.114.114.114
 server=/gdkjb.com/114.114.114.114
+server=/gdkjk56.com/114.114.114.114
 server=/gdkjw.com/114.114.114.114
 server=/gdks168.com/114.114.114.114
 server=/gdkszx.com/114.114.114.114
