--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -33931,6 +33931,7 @@ server=/gdczyy.com/114.114.114.114
 server=/gddata.net/114.114.114.114
 server=/gddcjt.com/114.114.114.114
 server=/gddcm.com/114.114.114.114
+server=/gddfpaper.com/114.114.114.114
 server=/gddg-hy.com/114.114.114.114
 server=/gddg.cc/114.114.114.114
 server=/gddhn.com/114.114.114.114
