--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -36474,6 +36474,7 @@ server=/guanxingyule.com/114.114.114.114
 server=/guanxingyun.com/114.114.114.114
 server=/guanxintec.com/114.114.114.114
 server=/guanxxg.com/114.114.114.114
+server=/guanyezipper.com/114.114.114.114
 server=/guanyinshan.com/114.114.114.114
 server=/guanyiyun.com/114.114.114.114
 server=/guanyou.ltd/114.114.114.114
