--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -39803,6 +39803,7 @@ server=/haianzhuangshi.com/114.114.114.114
 server=/haibao.com/114.114.114.114
 server=/haibao123.xyz/114.114.114.114
 server=/haibaobaoxian.com/114.114.114.114
+server=/haibaofoods.com/114.114.114.114
 server=/haibaoyl.com/114.114.114.114
 server=/haibaoyouxi.com/114.114.114.114
 server=/haibeinews.com/114.114.114.114
