--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -52879,6 +52879,7 @@ server=/jykss.com/114.114.114.114
 server=/jykuaidi.com/114.114.114.114
 server=/jyl1688.com/114.114.114.114
 server=/jyl88.com/114.114.114.114
+server=/jylight.cc/114.114.114.114
 server=/jyltx.com/114.114.114.114
 server=/jylw.com/114.114.114.114
 server=/jylxbc.com/114.114.114.114
