--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -33979,6 +33979,7 @@ server=/gdguangdong.com/114.114.114.114
 server=/gdgudong.com/114.114.114.114
 server=/gdguozhi.com/114.114.114.114
 server=/gdgwyw.com/114.114.114.114
+server=/gdgxxbw.com/114.114.114.114
 server=/gdgzhengzhou.com/114.114.114.114
 server=/gdgzrb.com/114.114.114.114
 server=/gdhaoma.com/114.114.114.114
