--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -13385,6 +13385,7 @@ server=/baodan360.com/114.114.114.114
 server=/baodaohealth.com/114.114.114.114
 server=/baodaren.net/114.114.114.114
 server=/baodery.com/114.114.114.114
+server=/baodian.com/114.114.114.114
 server=/baodigs.com/114.114.114.114
 server=/baodu.com/114.114.114.114
 server=/baoduys.com/114.114.114.114
