--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -21786,6 +21786,7 @@ server=/cmcc.in/114.114.114.114
 server=/cmccb2b.com/114.114.114.114
 server=/cmcconenet.com/114.114.114.114
 server=/cmccsim.com/114.114.114.114
+server=/cmcink.com/114.114.114.114
 server=/cmcloud.org/114.114.114.114
 server=/cmclound.com/114.114.114.114
 server=/cmcm.com/114.114.114.114
