accelerated-domains: add infoview.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -47559,6 +47559,7 @@ server=/informrack.com/114.114.114.114
 server=/inforsec.org/114.114.114.114
 server=/infosoft.cc/114.114.114.114
 server=/infovc.com/114.114.114.114
+server=/infoview.com/114.114.114.114
 server=/infowuxi.com/114.114.114.114
 server=/infoxgame.com/114.114.114.114
 server=/inframe.mobi/114.114.114.114
