accelerated-domains: add ty-archdesign.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -85076,6 +85076,7 @@ server=/txyscdn.com/114.114.114.114
 server=/txyscdn.net/114.114.114.114
 server=/txzb.app/114.114.114.114
 server=/txzing.com/114.114.114.114
+server=/ty-archdesign.com/114.114.114.114
 server=/ty-group.net/114.114.114.114
 server=/ty-im.com/114.114.114.114
 server=/ty-magnet.com/114.114.114.114
