--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -33923,6 +33923,7 @@ server=/gdcjtd.com/114.114.114.114
 server=/gdcocodemer.com/114.114.114.114
 server=/gdcoop.com/114.114.114.114
 server=/gdcopper.com/114.114.114.114
+server=/gdcreate.com/114.114.114.114
 server=/gdctcd.com/114.114.114.114
 server=/gdcts.com/114.114.114.114
 server=/gdctsvisa.com/114.114.114.114
