--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -69118,6 +69118,7 @@ server=/procar.cc/114.114.114.114
 server=/processedmetals.com/114.114.114.114
 server=/processon.com/114.114.114.114
 server=/procetpoeinjector.com/114.114.114.114
+server=/prochembio.com/114.114.114.114
 server=/prociss.com/114.114.114.114
 server=/procivi.net/114.114.114.114
 server=/prodcam.cc/114.114.114.114
