--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -92682,6 +92682,7 @@ server=/xiaopinwo.com/114.114.114.114
 server=/xiaopiu.com/114.114.114.114
 server=/xiaoqiandao.com/114.114.114.114
 server=/xiaoqiangge.com/114.114.114.114
+server=/xiaoqiling.com/114.114.114.114
 server=/xiaoqingtou.com/114.114.114.114
 server=/xiaoqinre.com/114.114.114.114
 server=/xiaoqiqiao.com/114.114.114.114
