accelerated-domains: add znum.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -103759,6 +103759,7 @@ server=/zntb.net/114.114.114.114
 server=/zntschool.com/114.114.114.114
 server=/zntvrom.com/114.114.114.114
 server=/zntx.cc/114.114.114.114
+server=/znum.com/114.114.114.114
 server=/znvren.com/114.114.114.114
 server=/znwb.com/114.114.114.114
 server=/znxdxs.com/114.114.114.114
