accelerated-domains: add xs-ir.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -94628,6 +94628,7 @@ server=/xrxukegi.com/114.114.114.114
 server=/xrxx365.com/114.114.114.114
 server=/xrzhg.com/114.114.114.114
 server=/xrzww.com/114.114.114.114
+server=/xs-ir.com/114.114.114.114
 server=/xs-servers.com/114.114.114.114
 server=/xs058.com/114.114.114.114
 server=/xs3cnc.com/114.114.114.114
