accelerated-domains: add gdjly.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -34020,6 +34020,7 @@ server=/gdjiutu.com/114.114.114.114
 server=/gdjktk.com/114.114.114.114
 server=/gdjky.com/114.114.114.114
 server=/gdjlfood.com/114.114.114.114
+server=/gdjly.com/114.114.114.114
 server=/gdjs120.com/114.114.114.114
 server=/gdjshd.com/114.114.114.114
 server=/gdjsxh.com/114.114.114.114
