--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -91277,6 +91277,7 @@ server=/wylws.com/114.114.114.114
 server=/wylylxx.com/114.114.114.114
 server=/wyn88.com/114.114.114.114
 server=/wynca.com/114.114.114.114
+server=/wynnstools.com/114.114.114.114
 server=/wyptk.com/114.114.114.114
 server=/wypxj.com/114.114.114.114
 server=/wyrlzy.com/114.114.114.114
