accelerated-domains: add zhtgroup.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -102441,6 +102441,7 @@ server=/zhrtc.com/114.114.114.114
 server=/zhsho.com/114.114.114.114
 server=/zhshw.com/114.114.114.114
 server=/zhtelecom.com/114.114.114.114
+server=/zhtgroup.com/114.114.114.114
 server=/zhtmid.com/114.114.114.114
 server=/zhtuanjian.com/114.114.114.114
 server=/zhuainiu.com/114.114.114.114
