accelerated-domains: add aerocityholding.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -9593,6 +9593,7 @@ server=/aerdai.com/114.114.114.114
 server=/aerfaying.com/114.114.114.114
 server=/aero-shenyang.com/114.114.114.114
 server=/aerochina.net/114.114.114.114
+server=/aerocityholding.com/114.114.114.114
 server=/aeryt111.fun/114.114.114.114
 server=/aesdrink.com/114.114.114.114
 server=/aesmysecurebill.com/114.114.114.114
