--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -56139,6 +56139,7 @@ server=/leadrive.com/114.114.114.114
 server=/leadshiptech.com/114.114.114.114
 server=/leadstong.com/114.114.114.114
 server=/leadvsion.com/114.114.114.114
+server=/leadway-china.com/114.114.114.114
 server=/leadwaytk.com/114.114.114.114
 server=/leadyo.com/114.114.114.114
 server=/leadzees.com/114.114.114.114
