accelerated-domains: add sumwin.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -79905,6 +79905,7 @@ server=/sumoon.com/114.114.114.114
 server=/sumrday.net/114.114.114.114
 server=/sumscope.com/114.114.114.114
 server=/sumuda.tech/114.114.114.114
+server=/sumwin.com/114.114.114.114
 server=/sumzc.com/114.114.114.114
 server=/sumzi.com/114.114.114.114
 server=/sun-ada.net/114.114.114.114
