accelerated-domains: add sunyuu.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -80069,6 +80069,7 @@ server=/sunyet.com/114.114.114.114
 server=/sunyitech.com/114.114.114.114
 server=/sunyoads.com/114.114.114.114
 server=/sunyongfeng.com/114.114.114.114
+server=/sunyuu.com/114.114.114.114
 server=/sunywo.com/114.114.114.114
 server=/sunzhongwei.com/114.114.114.114
 server=/sunzn.com/114.114.114.114
