accelerated-domains: add fangyuan-group.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -30945,6 +30945,7 @@ server=/fangying.tv/114.114.114.114
 server=/fangyou.com/114.114.114.114
 server=/fangyouquan.com/114.114.114.114
 server=/fangyouw.com/114.114.114.114
+server=/fangyuan-group.com/114.114.114.114
 server=/fangyuan365.com/114.114.114.114
 server=/fangyuan567.com/114.114.114.114
 server=/fangyuanhp.com/114.114.114.114
