accelerated-domains: add gdlnpumps.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -34052,6 +34052,7 @@ server=/gdlins.com/114.114.114.114
 server=/gdliontech.com/114.114.114.114
 server=/gdlkjt.com/114.114.114.114
 server=/gdlmetc.com/114.114.114.114
+server=/gdlnpumps.com/114.114.114.114
 server=/gdlsgz.com/114.114.114.114
 server=/gdlswl.com/114.114.114.114
 server=/gdly-motor.com/114.114.114.114
