accelerated-domains: add gdxianghai.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -34191,6 +34191,7 @@ server=/gdwz.com/114.114.114.114
 server=/gdxdpg.com/114.114.114.114
 server=/gdxdy.com/114.114.114.114
 server=/gdxfl.com/114.114.114.114
+server=/gdxianghai.com/114.114.114.114
 server=/gdxindun.com/114.114.114.114
 server=/gdxinqiang168.com/114.114.114.114
 server=/gdxinxiang.com/114.114.114.114
