--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -36804,6 +36804,7 @@ server=/guoyice.com/114.114.114.114
 server=/guoyu.com/114.114.114.114
 server=/guoyu.link/114.114.114.114
 server=/guoyuanliang.com/114.114.114.114
+server=/guoyuegroup.com/114.114.114.114
 server=/guoyuejituan.com/114.114.114.114
 server=/guoyunjc.com/114.114.114.114
 server=/guoyusec.com/114.114.114.114
