accelerated-domains: add hongkegd.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -43230,6 +43230,7 @@ server=/hongjing.com/114.114.114.114
 server=/hongjingedu.com/114.114.114.114
 server=/hongjinleather.com/114.114.114.114
 server=/hongkang-life.com/114.114.114.114
+server=/hongkegd.com/114.114.114.114
 server=/hongkongairlines.com/114.114.114.114
 server=/hongkongcache.com/114.114.114.114
 server=/hongku.com/114.114.114.114
