--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -64185,6 +64185,7 @@ server=/newersuperdrover.com/114.114.114.114
 server=/newevcar.com/114.114.114.114
 server=/neweyezs.com/114.114.114.114
 server=/newfastloan.cc/114.114.114.114
+server=/newglp.com/114.114.114.114
 server=/newgscloud.com/114.114.114.114
 server=/newharbour.net/114.114.114.114
 server=/newhb.com/114.114.114.114
