--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -90654,6 +90654,7 @@ server=/wszwhg.net/114.114.114.114
 server=/wt-tech.com/114.114.114.114
 server=/wt168.com/114.114.114.114
 server=/wt222.com/114.114.114.114
+server=/wta-web.org/114.114.114.114
 server=/wtaluo.com/114.114.114.114
 server=/wtango.com/114.114.114.114
 server=/wtapi.com/114.114.114.114
