accelerated-domains: add gzzgresin.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -39636,6 +39636,7 @@ server=/gzzdgg.com/114.114.114.114
 server=/gzzdkg.com/114.114.114.114
 server=/gzzdqy.net/114.114.114.114
 server=/gzzfrl.com/114.114.114.114
+server=/gzzgresin.com/114.114.114.114
 server=/gzzhanmei.com/114.114.114.114
 server=/gzzhitu.com/114.114.114.114
 server=/gzzhixin.com/114.114.114.114
