accelerated-domains: add jianhuasheng.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -49736,6 +49736,7 @@ server=/jiangzikanshu.com/114.114.114.114
 server=/jiangziyuedu.com/114.114.114.114
 server=/jianhaobao.com/114.114.114.114
 server=/jianhuagroup.com/114.114.114.114
+server=/jianhuasheng.com/114.114.114.114
 server=/jianhui.org/114.114.114.114
 server=/jianianle.com/114.114.114.114
 server=/jianjian.tv/114.114.114.114
