--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -101869,6 +101869,7 @@ server=/zhifuqz.com/114.114.114.114
 server=/zhifutui.com/114.114.114.114
 server=/zhifux.com/114.114.114.114
 server=/zhifuzi.com/114.114.114.114
+server=/zhigaometal.com/114.114.114.114
 server=/zhigongfu.com/114.114.114.114
 server=/zhigou.com/114.114.114.114
 server=/zhigou888.com/114.114.114.114
