--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -33956,6 +33956,7 @@ server=/gddtop.com/114.114.114.114
 server=/gddyhb168.com/114.114.114.114
 server=/gddysl.com/114.114.114.114
 server=/gddz0769.com/114.114.114.114
+server=/gde.cc/114.114.114.114
 server=/gdeams.com/114.114.114.114
 server=/gdebidding.com/114.114.114.114
 server=/gdecn.com/114.114.114.114
