accelerated-domains: add zhicheng-champion.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -101831,6 +101831,7 @@ server=/zhicaiwang.com/114.114.114.114
 server=/zhicall.com/114.114.114.114
 server=/zhichanli.com/114.114.114.114
 server=/zhichaoxt.com/114.114.114.114
+server=/zhicheng-champion.com/114.114.114.114
 server=/zhicheng.net/114.114.114.114
 server=/zhichepai.com/114.114.114.114
 server=/zhichepin.com/114.114.114.114
