--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -33901,6 +33901,7 @@ server=/gdapi.net/114.114.114.114
 server=/gdatacube.net/114.114.114.114
 server=/gdatc.net/114.114.114.114
 server=/gdbailin.com/114.114.114.114
+server=/gdbainengbao.com/114.114.114.114
 server=/gdbaishun.net/114.114.114.114
 server=/gdbbk.com/114.114.114.114
 server=/gdbenke.com/114.114.114.114
