accelerated-domains: add canyousoftware.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -17602,6 +17602,7 @@ server=/canyingroup.com/114.114.114.114
 server=/canyinzixun.com/114.114.114.114
 server=/canyon-model.com/114.114.114.114
 server=/canyouchina.com/114.114.114.114
+server=/canyousoftware.com/114.114.114.114
 server=/canyuanzs.com/114.114.114.114
 server=/caoanhospital.com/114.114.114.114
 server=/caobao.com/114.114.114.114
