accelerated-domains: add daquncnc.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -25198,6 +25198,7 @@ server=/daqo.com/114.114.114.114
 server=/daqqd.com/114.114.114.114
 server=/daqsoft.com/114.114.114.114
 server=/daquan.com/114.114.114.114
+server=/daquncnc.com/114.114.114.114
 server=/daraz.com/114.114.114.114
 server=/daraz.lk/114.114.114.114
 server=/daraz.pk/114.114.114.114
