accelerated-domains: add gadlee.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -33402,6 +33402,7 @@ server=/gacmotor.com/114.114.114.114
 server=/gacrnd.com/114.114.114.114
 server=/gacsofinco.com/114.114.114.114
 server=/gadanhua.com/114.114.114.114
+server=/gadlee.com/114.114.114.114
 server=/gae-pro.com/114.114.114.114
 server=/gae-yfeigaggoagjag.com/114.114.114.114
 server=/gaeadata.com/114.114.114.114
