--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -36716,6 +36716,7 @@ server=/guohongxin.com/114.114.114.114
 server=/guohu360.com/114.114.114.114
 server=/guohua88.com/114.114.114.114
 server=/guohuapharm.com/114.114.114.114
+server=/guohuarf.com/114.114.114.114
 server=/guohuayule.com/114.114.114.114
 server=/guoing.com/114.114.114.114
 server=/guoji.biz/114.114.114.114
