--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -28820,6 +28820,7 @@ server=/eaecis.com/114.114.114.114
 server=/eafifaonline2.com/114.114.114.114
 server=/eagla163.com/114.114.114.114
 server=/eaglebgm.com/114.114.114.114
+server=/eaglebrandgroup.com/114.114.114.114
 server=/eaglecoin.com/114.114.114.114
 server=/eaglejt.com/114.114.114.114
 server=/eaglemale.com/114.114.114.114
